that take wx.Point and/or wx.Size objects instead of individual
parameters. 

Added wx.lib.mixins.listctrl.TextEditMixin, a mixin class that allows
all columns of a wx.ListCtrl in report mode to be edited.

Deprecated the wx.iewin module.

Deprecated the wx.Sizer.AddWindow, AddSizer, AddSpacer methods as well
as their Insert* and Prepend* counterparts.




2.5.1.5
-------

(See also the MigrationGuide_ file for details about some of the
big changes that have happened in this release and how you should
adapt your code.)

.. _MigrationGuide: MigrationGuide.html


The wxWindows project and library is now known as wxWidgets.  Please
see http://www.wxwindows.org/name.htm for more details.  This won't
really affect wxPython all that much, other than the fact that the
wxwindows.org domain name will be changing to wxwidgets.org, so mail
list, CVS, and etc. addresses will be changing.  We're going to try
and smooth the transition as much as possible, but I wanted you all to
be aware of this change if you run into any issues.


Many, many little fixes, changes and additions done as part of the move
to wxWidgets 2.5 that I have forgotten about.

Added wxMirrorDC.

Added wxIconLocation

Added Python wrappers and demos for the new wxVScrolledWindow,
wxVListBox, and wxHtmlListBox classes.

Added wrappers for wxBookCtrl and wxListbook.  wxNotebook now derives
from wxBookCtrl.

Added Gordon Williams' PyPlot module to the library, available as the
wx.lib.plot module.

I made a small but important change in the code that aquires the
Python Global Interpreter Lock to try and prevent deadlocks that can
happen when there are nested attempts to aquire the GIL.

The RPMs will now install menu items on Mandrake Linux in
Applications/Development/Tools for PyCrust, XRCed, etc.  The RPMs are
also installing icons and ``*.desktop`` items in the generic KDE and
GNOME locations, but I don't know yet if they are resulting in menu