@@ -3,6 +3,7 @@ import  wx
 
 
 USE_GENERIC = 0
+
 if USE_GENERIC:
     from wx.lib.stattext import GenStaticText as StaticText
 else:
@@ -14,30 +15,35 @@ else:
 class TestPanel(wx.Panel):
     def __init__(self, parent):
         wx.Panel.__init__(self, parent, -1)
+        ##self.SetBackgroundColour("sky blue")
 
         StaticText(self, -1, "This is an example of static text", (20, 10))
         StaticText(self, -1, "using the wx.StaticText Control.", (20, 30))
 
         StaticText(
-            self, -1, "Is this yellow?", (20, 70), (90, -1)
+            self, -1, "Is this yellow?", (20, 70), (120, -1)
             ).SetBackgroundColour('Yellow')
 
         StaticText(
-            self, -1, "align center", (120, 70), (90, -1), wx.ALIGN_CENTER
+            self, -1, "align center", (160, 70), (120, -1), wx.ALIGN_CENTER
             ).SetBackgroundColour('Yellow')
 
         StaticText(
-            self, -1, "align right", (220, 70), (90, -1), wx.ALIGN_RIGHT
+            self, -1, "align right", (300, 70), (120, -1), wx.ALIGN_RIGHT
             ).SetBackgroundColour('Yellow')
 
         str = "This is a different font."
-        text = StaticText(self, -1, str, (20, 100))
+        text = StaticText(self, -1, str, (20, 120))
         font = wx.Font(18, wx.SWISS, wx.NORMAL, wx.NORMAL)
         text.SetFont(font)
         text.SetSize(text.GetBestSize())
 
-        StaticText(self, -1, "Multi-line wx.StaticText\nline 2\nline 3\n\nafter empty line", (20,150))
-        StaticText(self, -1, "Align right multi-line\nline 2\nline 3\n\nafter empty line", (220,150), style=wx.ALIGN_RIGHT)
+        StaticText(self, -1,
+                   "Multi-line wx.StaticText\nline 2\nline 3\n\nafter empty line",
+                   (20,170))
+        StaticText(self, -1,
+                   "Align right multi-line\nline 2\nline 3\n\nafter empty line",
+                   (220,170), style=wx.ALIGN_RIGHT)
 
 
 #---------------------------------------------------------------------------
